work on deepsurv implementation from Mac

--- a/main.ipynb
+++ b/main.ipynb
@@ -1077,9 +1077,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new_ktenv",
+   "display_name": "deepicc",
    "language": "python",
-   "name": "new_ktenv"
+   "name": "deepicc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1091,7 +1091,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
