Correctly working notebook version of Hassan's code with genetic data

--- a/deepicc_v2.ipynb
+++ b/deepicc_v2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import os\n",
     "import pandas as pd\n",
-    "from pysurvival.models.simulations import SimulationModel\n",
+    "# from pysurvival.models.simulations import SimulationModel\n",
     "from sklearn.model_selection import train_test_split\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -39,17 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BasicModel(nn.Module):\n",
     "    ''' The module class performs building network according to config'''\n",
-    "    def __init__(self, activation):\n",
+    "    def __init__(self, activation, covariates):\n",
     "        ''' Initialize BasicModel class\n",
     "\n",
     "        Args:\n",
     "            activation: string, name of activation function to use\n",
+    "            covariates: int, number of covariates, needed for size of first layer\n",
     "\n",
     "        Returns:\n",
     "            torch.nn Module object, built sequential network\n",
@@ -62,7 +63,7 @@
     "        # Flag to in/exclude normalization layers\n",
     "        self.norm = True\n",
     "        # Default dimensions of fully connected layers\n",
-    "        self.dims = [10, 4, 1]#10, 17, 17, 17, 1]\n",
+    "        self.dims = [covariates, 4, 1]#10, 17, 17, 17, 1]\n",
     "        # Activation type to use\n",
     "        self.activation = activation\n",
     "        # Build network using class function (below)\n",
@@ -102,6 +103,8 @@
     "        return self.model(X)\n",
     "\n",
     "\n",
+    "\n",
+    "    \n",
     "class NegativeLogLikelihood(nn.Module):\n",
     "    '''Negative log likelihood loss function from Katzman et al. (2018) DeepSurv model (equation 4)'''\n",
     "    def __init__(self, gpu):\n",
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,9 +204,10 @@
     "        # Get time and event indicator columns out of dataframe\n",
     "        self.data = list(zip(dataset.time, dataset.event))\n",
     "        self.len = len(dataset)\n",
-    "        # Normalize covariate data with class function\n",
     "        print('=> load {} samples'.format(self.len))\n",
-    "        self._normalize()\n",
+    "        # Normalize covariate data with class function\n",
+    "        if args.normalize:\n",
+    "            self._normalize()\n",
     "\n",
     "    def _normalize(self):\n",
     "        '''Normalize X data (covariates) (transform values to range between 0 and 1)'''\n",
@@ -321,23 +325,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Arguments for network\n",
-    "args = Namespace(activation = 'SELU',\n",
-    "                 batch_size = 4000,\n",
-    "                 covariates = 10, \n",
-    "                 decay_interval = 400,\n",
-    "                 development = 0,\n",
-    "                 dropout = 0.3,\n",
-    "                 epochs = 500,\n",
-    "                 lib = '',\n",
-    "                 lr = 0.001,\n",
-    "                 out = 1,\n",
-    "                 strat = 'none',# not sure if I actually need this one\n",
-    "                 weight_decay = 0.0001\n",
+    "args = Namespace(activation = 'SELU',  # activation for fully connected layers\n",
+    "                 batch_size = 4000,    # this is currently ignored by the DataLoader\n",
+    "                 covariates = 18,      # input size, will be size of first layer\n",
+    "                 decay_interval = 400, # how many epochs pass before weight decay is applied\n",
+    "                 development = True,   # if testing, sends output to separate directory\n",
+    "                 dropout = 0.3,        # Dropout rate \n",
+    "                 epochs = 500,         # Training epoch count\n",
+    "                 lr = 0.001,           # Learning rate\n",
+    "                 normalize = False,    # Whether to normalize covariate data \n",
+    "                 weight_decay = 0.0001 # Decay rate for weights\n",
     "                )\n",
     "\n",
     "best_acc = 0\n",
@@ -345,106 +347,62 @@
     "gpu = torch.device(\"cpu\")\n",
     "\n",
     "# Setting up output path from model training\n",
-    "root_output = '/Users/katyscott/Documents/ICC/Code/cox_experiments'\n",
+    "# Mac directory \n",
+    "# root_output = '/Users/katyscott/Documents/ICC/Code/cox_experiments'\n",
     "\n",
-    "if args.development == 1:\n",
+    "# Linux directory\n",
+    "root_output = '/media/katy/Data/ICC/Code/cox_experiments'\n",
+    "\n",
+    "if args.development:\n",
     "    save_path = 'test'\n",
     "else:\n",
     "    save_path = '{}_{}lr_{}b_'.format(args.activation,args.lr,args.batch_size)\n",
     "    \n",
     "out_dir = os.path.join(root_output, save_path)\n",
     "if not os.path.exists(out_dir):\n",
-    "    os.makedirs(out_dir)\n",
-    "\n",
-    "# Build network \n",
-    "model = BasicModel(args.activation).to(gpu)\n",
-    "\n",
-    "# Loss function\n",
-    "criterion = NegativeLogLikelihood(gpu)\n",
-    "\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=args.lr)"
+    "    os.makedirs(out_dir)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Simulated Data creation"
+    "#### Simulated Data creation\n",
+    "\n",
+    "*Note: this is currently broken on Linux, can't install pysurvival. Works on Mac.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of data-points: 4000 - Number of events: 3104.0\n",
-      "Number of data-points: 500 - Number of events: 392.0\n",
-      "=> load 4000 samples\n",
-      "=> load 500 samples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# generate random survival times with exp. distribution\n",
-    "sim = SimulationModel(survival_distribution='exponential',\n",
-    "                      risk_type = 'Linear',\n",
-    "                      censored_parameter = 6,\n",
-    "                      alpha = 1,\n",
-    "                      beta = 5)\n",
+    "# sim = SimulationModel(survival_distribution='exponential',\n",
+    "#                       risk_type = 'Linear',\n",
+    "#                       censored_parameter = 6,\n",
+    "#                       alpha = 1,\n",
+    "#                       beta = 5)\n",
     "\n",
-    "train_samples = sim.generate_data(num_samples = 4000,\n",
-    "                                  num_features = args.covariates,\n",
-    "                                  feature_weights = [1, 1, 0, 0, 0, 0, 0, 0, 0, 0])\n",
+    "# train_samples = sim.generate_data(num_samples = 4000,\n",
+    "#                                   num_features = args.covariates,\n",
+    "#                                   feature_weights = [1, 1, 0, 0, 0, 0, 0, 0, 0, 0])\n",
     "\n",
-    "val_samples = sim.generate_data(num_samples = 500,\n",
-    "                                num_features = args.covariates,\n",
-    "                                feature_weights = [1, 1, 0, 0, 0, 0, 0, 0, 0, 0])\n",
+    "# val_samples = sim.generate_data(num_samples = 500,\n",
+    "#                                 num_features = args.covariates,\n",
+    "#                                 feature_weights = [1, 1, 0, 0, 0, 0, 0, 0, 0, 0])\n",
     "\n",
-    "train_dataset = SurvivalDataset(train_samples, args)\n",
-    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=train_dataset.__len__())\n",
+    "# train_dataset = SurvivalDataset(train_samples, args)\n",
+    "# train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=train_dataset.__len__())\n",
     "\n",
-    "val_dataset = SurvivalDataset(val_samples, args)\n",
-    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=val_dataset.__len__())\n"
+    "# val_dataset = SurvivalDataset(val_samples, args)\n",
+    "# val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=val_dataset.__len__())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       0.206840\n",
-       "1       1.027174\n",
-       "2       1.718268\n",
-       "3       2.283229\n",
-       "4       3.595767\n",
-       "          ...   \n",
-       "3995    1.304077\n",
-       "3996    0.159206\n",
-       "3997    0.076456\n",
-       "3998    0.419792\n",
-       "3999    1.888246\n",
-       "Name: time, Length: 4000, dtype: float64"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_samples.time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,23 +435,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=> load 88 samples\n",
-      "=> load 23 samples\n"
+      "=> load 88 samples\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-22-247bc64a61da>:21: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  self.X = (self.X - self.X.min(axis=0)) / (self.X.max(axis=0) - self.X.min(axis=0))\n"
+     "ename": "AttributeError",
+     "evalue": "'Namespace' object has no attribute 'normalize'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-e2eb6db5bf0b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSurvivalDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_genes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtrain_loader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__len__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mval_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSurvivalDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_genes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mval_loader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mval_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__len__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-2a21bd0b92cd>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, dataset, args)\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'=> load {} samples'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;31m# Normalize covariate data with class function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_normalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Namespace' object has no attribute 'normalize'"
      ]
     }
    ],
@@ -503,6 +464,22 @@
     "\n",
     "val_dataset = SurvivalDataset(val_genes, args)\n",
     "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=val_dataset.__len__())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build network \n",
+    "model = BasicModel(args.activation).to(gpu)\n",
+    "\n",
+    "# Loss function\n",
+    "criterion = NegativeLogLikelihood(gpu)\n",
+    "\n",
+    "# Set optimizer\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=args.lr)"
    ]
   },
   {
@@ -581,9 +558,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deepicc",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "deepicc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -595,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
