Fixed keras tuner import

--- a/data_exploration/explore_genetics.ipynb
+++ b/data_exploration/explore_genetics.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2bda2297",
    "metadata": {},
    "source": [
     "## Preliminaries\n",
@@ -11,8 +12,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "bab9dfa7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'kerastuner'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-73392ac30dbb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mkerastuner\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mkt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mlifelines\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mKaplanMeierFitter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCoxPHFitter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'kerastuner'"
+     ]
+    }
+   ],
    "source": [
     "import kerastuner as kt\n",
     "from lifelines import KaplanMeierFitter, CoxPHFitter\n",
@@ -28,6 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "96f77d6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "80c2b981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "1b061c30",
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "f6259ef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "8714ba4e",
    "metadata": {},
    "outputs": [
     {
@@ -313,6 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a7d62060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,6 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
+   "id": "b99a169e",
    "metadata": {},
    "outputs": [
     {
@@ -365,6 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "id": "28f08086",
    "metadata": {},
    "outputs": [
     {
@@ -413,6 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "41aba33f",
    "metadata": {},
    "outputs": [
     {
@@ -672,6 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "91920021",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,6 +705,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7feb23f9",
    "metadata": {},
    "source": [
     "**X**  - covariates\n",
@@ -691,6 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "5791aead",
    "metadata": {},
    "outputs": [
     {
@@ -763,6 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "c613818c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,6 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "12925c91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,6 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "268699ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,6 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "e5dbe79d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,6 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "7006b4d5",
    "metadata": {},
    "outputs": [
     {
@@ -833,6 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "d8e6d39d",
    "metadata": {},
    "outputs": [
     {
@@ -1853,6 +1885,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "6bb7a4f0",
    "metadata": {},
    "outputs": [
     {
@@ -1886,6 +1919,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "37bb821b",
    "metadata": {},
    "outputs": [
     {
@@ -1910,6 +1944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f71e72b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1917,9 +1952,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deepicc",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "deepicc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1931,7 +1966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
