Worked on getting plots from these analyses

--- a/data_exploration/explore_CTfeatures.ipynb
+++ b/data_exploration/explore_CTfeatures.ipynb
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_filename = \"../Data/selectTextFeatures.xlsx\"\n",
+    "selected_filename = \"../../Data/selectTextFeatures.xlsx\"\n",
     "\n",
     "selected_features = pd.read_excel(selected_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "4  133.561899  0.000179  6.195812  0.013361  3.011489  0.012065  0.032381  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,9 +506,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deepicc",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "deepicc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -520,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
