--- a/data_exploration/data_explore.ipynb
+++ b/data_exploration/data_explore.ipynb
@@ -634,9 +634,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new_ktenv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "new_ktenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -648,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
