Added calculating median survival time

--- a/data_exploration/survcurv_cancertype.ipynb
+++ b/data_exploration/survcurv_cancertype.ipynb
@@ -71,10 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "55059a70-b0d7-4070-ad35-af736183d61a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median HDFS time\n",
+      "HCC:  68.0\n",
+      "MCRC:  52.766666666666666\n",
+      "ICC:  19.0\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -89,7 +99,7 @@
        "Text(0.5, 0, 'Time (months)')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -115,18 +125,23 @@
     "# HCC survival\n",
     "kmf.fit(hcc_data.HDFS, hcc_data.HDFS_code, label='HCC')\n",
     "kmf.plot_survival_function(ax=ax, show_censors=True)\n",
+    "print(\"Median HDFS time\")\n",
+    "print(\"HCC: \", kmf.median_survival_time_)\n",
     "\n",
     "# MCRC survival\n",
     "kmf.fit(mcrc_data.LiverDFS_months, mcrc_data.HDFS_status, label='MCRC')\n",
     "kmf.plot_survival_function(ax=ax, show_censors=True)\n",
+    "print(\"MCRC: \", kmf.median_survival_time_)\n",
     "\n",
     "# ICC survival\n",
     "kmf.fit(icc_data.RFS, icc_data.RFS_Code, label='ICC')\n",
     "kmf.plot_survival_function(ax=ax, show_censors=True)\n",
+    "print(\"ICC: \", kmf.median_survival_time_)\n",
     "\n",
     "plt.title(\"Hepatic Disease Free Survival\")\n",
     "plt.ylabel(\"Probability of Survival\")\n",
-    "plt.xlabel(\"Time (months)\")"
+    "plt.xlabel(\"Time (months)\")\n",
+    "\n"
    ]
   },
   {
