Added GHCI function and tumor RSF code

--- a/RandomSurvivalForest/hdfs_random_forest.ipynb
+++ b/RandomSurvivalForest/hdfs_random_forest.ipynb
@@ -4,33 +4,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'rpy2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-e26b79b676cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpysurvival\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mrpy2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrobjects\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mrobjects\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrpy2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrobjects\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpackags\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mrpackages\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rpy2'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
     "import pandas as pd\n",
     "import pysurvival\n",
-    "# import rpy2.robjects as robjects\n",
-    "# import rpy2.robjects.packags as rpackages\n",
+    "import rpy2.robjects as robjects\n",
+    "import rpy2.robjects.packages as rpackages\n",
     "\n",
     "from pysurvival.utils.display import correlation_matrix\n",
     "from pysurvival.models.survival_forest import RandomSurvivalForestModel\n",
     "from pysurvival.utils.metrics import concordance_index\n",
     "\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "\n"
+    "from sklearn.model_selection import StratifiedKFold"
    ]
   },
   {
@@ -38,16 +25,58 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "# Only need to run this once\n",
+    "utils = rpackages.importr('utils')\n",
+    "utils.chooseCRANmirror(ind=1)\n",
+    "utils.install_packages(\"survAUC\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gh_c_index(risk_pred):\n",
+    "    \"\"\"\n",
+    "    Calculate Gonen and Hiller's c-index using function from R (using rpy2) \n",
+    "\n",
+    "    Args:\n",
+    "        risk_pred: np.ndarray or torch.Tensor, risk score predictions from model\n",
+    "\n",
+    "    Source: Gonen, M. and G. Heller (2005). \n",
+    "    Concordance probability and discriminatory power in proportional hazards regression.\n",
+    "    Biometrika 92, 965–970.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # check for NaNs\n",
+    "    if not isinstance(risk_pred, np.ndarray):\n",
+    "        risk_pred = risk_pred.detach().cpu().numpy()\n",
+    "    for a in risk_pred:\n",
+    "        if np.isnan(a).any():\n",
+    "            raise ValueError(\"NaNs detected in inputs, please correct or drop.\")\n",
+    "\n",
+    "    # Use Gonen and Hiller's c-index via the survAUC library in R\n",
+    "    survAUC = rpackages.importr('survAUC')\n",
+    "\n",
+    "    # Get data into right format\n",
+    "    R_risk_pred = robjects.vectors.FloatVector(risk_pred)\n",
+    "\n",
+    "    # this doesn't work yet, need to get the list to numeric type\n",
+    "    # in R, this is accomplished with as.numeric and unlist()\n",
+    "    R_cind = survAUC.GHCI(R_risk_pred)\n",
+    "\n",
+    "    # Convert back to Python list with single value\n",
+    "    cind = list(R_cind)\n",
+    "\n",
+    "    # Return the only value in the cind list\n",
+    "    return cind[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +104,7 @@
     "    # Arguments not used from function input are defaults except importance_mode\n",
     "    # TODO: need to find out what importance mode is \n",
     "    rsf.fit(X, t, e, max_features='all', max_depth=max_depth, min_node_size=min_node_size,\n",
-    "            num_threads=-1, sample_size_pct=0.63, importance_mode='normalized_permutation',\n",
+    "            num_threads=-1, sample_size_pct=0.63,\n",
     "            seed=seed, save_memory=False)\n",
     "\n",
     "\n",
@@ -112,11 +141,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Harrel's C-index:  0.5629333691857613\n",
+      "GH C-index:  0.9954262190633624\n"
+     ]
+    }
+   ],
    "source": [
-    "data_folder = \"/Users/katyscott/Desktop/HDFS_Project/Data/FeatureSelection/\"\n",
+    "data_folder = \"/Data/FeatureSelection/\"\n",
     "\n",
     "train_liver_data = pd.read_excel(os.path.join(data_folder, \"train_liver_feats_and_labels.xlsx\"))\n",
     "test_liver_data = pd.read_excel(os.path.join(data_folder, \"test_liver_feats_and_labels.xlsx\"))\n",
@@ -129,35 +167,51 @@
     "tT_liver = test_liver_data[\"HDFS_Time\"]\n",
     "eT_liver = test_liver_data[\"HDFS_Code\"]\n",
     "\n",
-    "liver_rsf = train_survival_model(X_liver, t_liver, e_liver, 100, 10, 10, seed=16)\n",
-    "risk = liver_rsf.predict_risk(XT_liver).tolist()\n",
-    "c_ind = concordance_index(liver_rsf, XT_liver, tT_liver, eT_liver)"
+    "liver_rsf = train_survival_model(X_liver, t_liver, e_liver, 10, 10, 10, seed=16)\n",
+    "risk = liver_rsf.predict_risk(XT_liver)\n",
+    "h_c_ind = concordance_index(liver_rsf, XT_liver, tT_liver, eT_liver)\n",
+    "gh_c_ind = gh_c_index(risk)\n",
+    "\n",
+    "print(\"Harrel's C-index: \", h_c_ind)\n",
+    "print(\"GH C-index: \", gh_c_ind)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5671744712675267"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Harrel's C-index:  0.5290137975751902\n",
+      "GH C-index:  0.9933289922791773\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "data_folder = \"/Data/FeatureSelection/\"\n",
+    "\n",
+    "train_tumor_data = pd.read_excel(os.path.join(data_folder, \"train_tumor_feats_and_labels.xlsx\"))\n",
+    "test_tumor_data = pd.read_excel(os.path.join(data_folder, \"test_tumor_feats_and_labels.xlsx\"))\n",
+    "\n",
+    "X_tumor = train_tumor_data.drop(labels=[\"ScoutID\", \"HDFS_Time\", \"HDFS_Code\", \"Cancer_Type\"], axis=1)\n",
+    "t_tumor = train_tumor_data[\"HDFS_Time\"]\n",
+    "e_tumor = train_tumor_data[\"HDFS_Code\"]\n",
+    "\n",
+    "XT_tumor = test_tumor_data.drop(labels=[\"ScoutID\", \"HDFS_Time\", \"HDFS_Code\", \"Cancer_Type\"], axis=1)\n",
+    "tT_tumor = test_tumor_data[\"HDFS_Time\"]\n",
+    "eT_tumor = test_tumor_data[\"HDFS_Code\"]\n",
+    "\n",
+    "tumor_rsf = train_survival_model(X_tumor, t_tumor, e_tumor, 10, 10, 10, seed=16)\n",
+    "risk = tumor_rsf.predict_risk(XT_tumor)\n",
+    "h_c_ind = concordance_index(tumor_rsf, XT_tumor, tT_tumor, eT_tumor)\n",
+    "gh_c_ind = gh_c_index(risk)\n",
+    "\n",
+    "print(\"Harrel's C-index: \", h_c_ind)\n",
+    "print(\"GH C-index: \", gh_c_ind)"
+   ]
   },
   {
    "cell_type": "markdown",
